Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122247

Surface oscilloscope example labels show wrong numbers

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.0 Beta3, 6.8.0 FF
    • 6.8
    • Graphs: 3D
    • None
    • 749e0086c (dev), 447463e5d (6.7)

    Description

      In the surface oscilloscope example, when I click a point the label always shows "0 ms, 0 mV and 0 W" regardless where I click

      Attachments

        For Gerrit Dashboard: QTBUG-122247
        # Subject Branch Project Status CR V

        Activity

          People

            spouke Sakaria Pouke
            tuliniemi Jere Tuliniemi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes