Fix surface graph wrong label numbers

Fixes: QTBUG-122247
Change-Id: I1622bb2fbc869607e66d75f2315d04ed398f2405
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 749e0086c2cc4b749af8c1dc486cba3d0b7d3786)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>