src/graphs3d/qml/qquickgraphssurface.cpp
@@ -1892,6 +1892,7 @@ void QQuickGraphsSurface::updateSelectedPoint()
 
         SurfaceVertex selectedVertex;
         selectedVertex.position = pos;
+        selectedVertex.coord = model->selectedVertex.coord;
         if (model->series->isVisible() && !selectedVertex.position.isNull()
             && selectionMode().testFlag(QAbstract3DGraph::SelectionItem)) {
             m_instancing->addPosition(selectedVertex.position);
